--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.32.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
@@ -16,9 +17,11 @@
     "react": "^18",
     "react-aos": "^1.0.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
