--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/node": "20.12.8",
+    "@types/react": "18.3.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
