--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "eslint-plugin-react-hooks": "^4.6.2",
     "next": "14.1.2",
+    "next-auth": "^5.0.0-beta.18",
     "persist": "^0.2.7",
     "react": "^18",
     "react-aos": "^1.0.1",
